unpackaged/main/default/objects/Integracion_EBS_Facturas__c/Integracion_EBS_Facturas__c.object-meta.xml
<CustomObject>
    <label>Integración EBS Facturas</label>
    <nameField>
        <displayFormat>IEBSF-{00000}</displayFormat>
        <label>Folio Integración Factura</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integraciones EBS Facturas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>