unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/CategoriaDesc__c.field-meta.xml
<CustomField>
    <fullName>CategoriaDesc__c</fullName>
    <label>CategoriaDesc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>