unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/DocumentoAplicado__c.field-meta.xml
<CustomField>
    <fullName>DocumentoAplicado__c</fullName>
    <label>DocumentoAplicado</label>
    <length>250</length>
    <type>Text</type>
</CustomField>