unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/DocumentoClase__c.field-meta.xml
<CustomField>
    <fullName>DocumentoClase__c</fullName>
    <label>DocumentoClase</label>
    <length>100</length>
    <type>Text</type>
</CustomField>