unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/DocumentoDesc__c.field-meta.xml
<CustomField>
    <fullName>DocumentoDesc__c</fullName>
    <label>DocumentoDesc</label>
    <length>150</length>
    <type>Text</type>
</CustomField>