unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/DocumentoRef__c.field-meta.xml
<CustomField>
    <fullName>DocumentoRef__c</fullName>
    <label>DocumentoRef</label>
    <length>50</length>
    <type>Text</type>
</CustomField>