unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/EntidadLegal__c.field-meta.xml
<CustomField>
    <fullName>EntidadLegal__c</fullName>
    <label>EntidadLegal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>