unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/Estatus_Integracion__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Integracion__c</fullName>
    <label>Estatus Integración</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
            </value>
            <value>
                <fullName>Enviado</fullName>
            </value>
            <value>
                <fullName>Actualizado</fullName>
            </value>
            <value>
                <fullName>Integrado</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>