unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/EstatusFactura__c.field-meta.xml
<CustomField>
    <fullName>EstatusFactura__c</fullName>
    <label>EstatusFactura</label>
    <length>1</length>
    <type>Text</type>
</CustomField>