unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/EstatusProceso__c.field-meta.xml
<CustomField>
    <fullName>EstatusProceso__c</fullName>
    <label>EstatusProceso</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>