unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/EstatusReg__c.field-meta.xml
<CustomField>
    <fullName>EstatusReg__c</fullName>
    <label>EstatusReg</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>