unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/Factura__c.field-meta.xml
<CustomField>
    <fullName>Factura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Factura</label>
    <referenceTo>Documento__c</referenceTo>
    <relationshipLabel>Integraciones EBS Facturas</relationshipLabel>
    <relationshipName>Integraciones_EBS_Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>