unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/FechaReestructura__c.field-meta.xml
<CustomField>
    <fullName>FechaReestructura__c</fullName>
    <label>FechaReestructura</label>
    <type>Date</type>
</CustomField>