unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/FechaVencimiento__c.field-meta.xml
<CustomField>
    <fullName>FechaVencimiento__c</fullName>
    <label>FechaVencimiento</label>
    <type>Date</type>
</CustomField>