unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/FideicomisoFact__c.field-meta.xml
<CustomField>
    <fullName>FideicomisoFact__c</fullName>
    <label>FideicomisoFact</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>