unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/FideicomosoDesc__c.field-meta.xml
<CustomField>
    <fullName>FideicomosoDesc__c</fullName>
    <label>FideicomosoDesc</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>