unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/FinancieraDesc__c.field-meta.xml
<CustomField>
    <fullName>FinancieraDesc__c</fullName>
    <label>FinancieraDesc</label>
    <length>200</length>
    <type>Text</type>
</CustomField>