unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/FinancieraNum__c.field-meta.xml
<CustomField>
    <fullName>FinancieraNum__c</fullName>
    <label>FinancieraNum</label>
    <length>22</length>
    <type>Text</type>
</CustomField>