unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IdAplicarDocto__c.field-meta.xml
<CustomField>
    <fullName>IdAplicarDocto__c</fullName>
    <label>IdAplicarDocto</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>