unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IdClase__c.field-meta.xml
<CustomField>
    <fullName>IdClase__c</fullName>
    <label>IdClase</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>