unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IdClienteAr__c.field-meta.xml
<CustomField>
    <fullName>IdClienteAr__c</fullName>
    <label>IdClienteAr</label>
    <length>10</length>
    <type>Text</type>
</CustomField>