unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IdCobranzaMultiple__c.field-meta.xml
<CustomField>
    <fullName>IdCobranzaMultiple__c</fullName>
    <label>IdCobranzaMultiple</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>