unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IdDireccionRegional__c.field-meta.xml
<CustomField>
    <fullName>IdDireccionRegional__c</fullName>
    <label>IdDireccionRegional</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>