unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IdDocumentoTipo__c.field-meta.xml
<CustomField>
    <fullName>IdDocumentoTipo__c</fullName>
    <label>IdDocumentoTipo</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>