unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IdFacturaCrm__c.field-meta.xml
<CustomField>
    <fullName>IdFacturaCrm__c</fullName>
    <label>IdFacturaCrm</label>
    <length>30</length>
    <type>Text</type>
</CustomField>