unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IdFraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>IdFraccionamiento__c</fullName>
    <label>IdFraccionamiento</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>