unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IdLote__c.field-meta.xml
<CustomField>
    <fullName>IdLote__c</fullName>
    <label>IdLote</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>