unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IdManzana__c.field-meta.xml
<CustomField>
    <fullName>IdManzana__c</fullName>
    <label>IdManzana</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>