unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IdMunicipio__c.field-meta.xml
<CustomField>
    <fullName>IdMunicipio__c</fullName>
    <label>IdMunicipio</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>