unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IdPagareConta__c.field-meta.xml
<CustomField>
    <fullName>IdPagareConta__c</fullName>
    <label>IdPagareConta</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>