unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IdPagareReversa__c.field-meta.xml
<CustomField>
    <fullName>IdPagareReversa__c</fullName>
    <label>IdPagareReversa</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>