unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IdProcesoAr__c.field-meta.xml
<CustomField>
    <fullName>IdProcesoAr__c</fullName>
    <label>IdProcesoAr</label>
    <length>10</length>
    <type>Text</type>
</CustomField>