unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IdPrototipo__c.field-meta.xml
<CustomField>
    <fullName>IdPrototipo__c</fullName>
    <label>IdPrototipo</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>