unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IdTipoFactura__c.field-meta.xml
<CustomField>
    <fullName>IdTipoFactura__c</fullName>
    <label>IdTipoFactura</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>