unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/ImporteFactura__c.field-meta.xml
<CustomField>
    <fullName>ImporteFactura__c</fullName>
    <label>ImporteFactura</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>