unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IndAntesEscritura__c.field-meta.xml
<CustomField>
    <fullName>IndAntesEscritura__c</fullName>
    <label>IndAntesEscritura</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>