unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IndGastoAdmin__c.field-meta.xml
<CustomField>
    <fullName>IndGastoAdmin__c</fullName>
    <label>IndGastoAdmin</label>
    <length>1</length>
    <type>Text</type>
</CustomField>