unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IndIntereses__c.field-meta.xml
<CustomField>
    <fullName>IndIntereses__c</fullName>
    <label>IndIntereses</label>
    <length>1</length>
    <type>Text</type>
</CustomField>