unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IndReembolso__c.field-meta.xml
<CustomField>
    <fullName>IndReembolso__c</fullName>
    <label>IndReembolso</label>
    <length>1</length>
    <type>Text</type>
</CustomField>