unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/IndReestructurado__c.field-meta.xml
<CustomField>
    <fullName>IndReestructurado__c</fullName>
    <label>IndReestructurado</label>
    <length>1</length>
    <type>Text</type>
</CustomField>