unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/ModificationNum__c.field-meta.xml
<CustomField>
    <fullName>ModificationNum__c</fullName>
    <label>ModificationNum</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>