unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <label>Moneda</label>
    <length>50</length>
    <type>Text</type>
</CustomField>