unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/MontoFinanciado__c.field-meta.xml
<CustomField>
    <fullName>MontoFinanciado__c</fullName>
    <label>MontoFinanciado</label>
    <length>10</length>
    <type>Text</type>
</CustomField>