unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/NumCredito__c.field-meta.xml
<CustomField>
    <fullName>NumCredito__c</fullName>
    <label>NumCredito</label>
    <length>20</length>
    <type>Text</type>
</CustomField>