unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/NumFactura__c.field-meta.xml
<CustomField>
    <fullName>NumFactura__c</fullName>
    <label>NumFactura</label>
    <length>20</length>
    <type>Text</type>
</CustomField>