unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/OrigenDesc__c.field-meta.xml
<CustomField>
    <fullName>OrigenDesc__c</fullName>
    <label>OrigenDesc</label>
    <length>3</length>
    <type>Text</type>
</CustomField>