unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/RequisicionCrm__c.field-meta.xml
<CustomField>
    <fullName>RequisicionCrm__c</fullName>
    <label>RequisicionCrm</label>
    <length>20</length>
    <type>Text</type>
</CustomField>