unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/Response_CRM_hacia_EBS__c.field-meta.xml
<CustomField>
    <fullName>Response_CRM_hacia_EBS__c</fullName>
    <label>Response CRM hacia EBS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>