unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/RetryCount__c.field-meta.xml
<CustomField>
    <fullName>RetryCount__c</fullName>
    <label>RetryCount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>