unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/TermPago__c.field-meta.xml
<CustomField>
    <fullName>TermPago__c</fullName>
    <label>TermPago</label>
    <length>10</length>
    <type>Text</type>
</CustomField>