unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/TipoFactura__c.field-meta.xml
<CustomField>
    <fullName>TipoFactura__c</fullName>
    <label>TipoFactura</label>
    <length>25</length>
    <type>Text</type>
</CustomField>