unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/ValorCobJaver__c.field-meta.xml
<CustomField>
    <fullName>ValorCobJaver__c</fullName>
    <label>ValorCobJaver</label>
    <length>10</length>
    <type>Text</type>
</CustomField>