unpackaged/main/default/objects/Integracion_EBS_Facturas__c/fields/ValorOperacion__c.field-meta.xml
<CustomField>
    <fullName>ValorOperacion__c</fullName>
    <label>ValorOperacion</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>