unpackaged/main/default/objects/Integracion_EBS_Facturas__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>DocumentoAplicado__c</columns>
    <columns>IdClienteAr__c</columns>
    <columns>IdFacturaAr__c</columns>
    <columns>Estatus_Integracion__c</columns>
    <columns>TipoFactura__c</columns>
    <columns>Mensaje_API__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>